--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.95"
-polars = { version = "0.38.0", features = ["csv"] }
+polars = { version = "0.38.0", features = ["csv", "ndarray"] }
 rand = "0.9.0"
 reqwest = { version = "0.12.12", features = ["blocking"] }
 xgboost = "0.1.4"
