--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,16 @@ name = "house-price-predictor"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "train"
+path = "src/bin/train.rs"
+
+[[bin]]
+name = "api"
+path = "src/bin/api.rs"
+
 [dependencies]
+actix-web = "4.9.0"
 anyhow = "1.0.95"
 aws-config = "1.5.15"
 aws-sdk-s3 = "1.72.0"
@@ -12,3 +21,5 @@ rand = "0.9.0"
 reqwest = { version = "0.12.12", features = ["blocking"] }
 tokio = { version = "1.43.0", features = ["full"] }
 xgboost = "0.1.4"
+env_logger = "0.10"
+log = "0.4"
