--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ tokio = { version = "1.43.0", features = ["full"] }
 xgboost = "0.1.4"
 env_logger = "0.10"
 log = "0.4"
+serde = { version = "1.0.217", features = ["derive"] }
