--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ xgboost = "0.1.4"
 env_logger = "0.10"
 log = "0.4"
 serde = { version = "1.0.217", features = ["derive"] }
+clap = { version = "4.5.28", features = ["derive"] }
